--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,6 +121,7 @@ jobs:
             cd frontend
             npm install
             npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical
       # - slack/notify:
       #     channel: $SLACK_DEFAULT_CHANNEL
       #     event: fail
@@ -142,7 +143,7 @@ jobs:
             cd backend
             npm install
             npm audit fix --audit-level=critical --force
-            
+            npm audit --audit-level=critical
       # - slack/notify:
       #     channel: $SLACK_DEFAULT_CHANNEL
       #     event: fail
