--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -8,25 +8,32 @@
   become_user: root  
   gather_facts: false
   vars:
-    - ansible_python_interpreter: /usr/bin/python3
-    - ansible_host_key_checking: false
-    - ansible_stdout_callback: yaml
+    ansible_python_interpreter: /usr/bin/python3
+    ansible_host_key_checking: false
+    ansible_stdout_callback: yaml
 
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
       # Your code here
       wait_for_connection:
-        delay: 60
         timeout: 600
 
     - name: "install python for Ansible."
       # Your code here
       become: yes
       apt:
-        name: "python3-pip"
+        name: python3
         update_cache: yes
-        state: present
 
+    - name: "Install Node.js 13"
+      shell: |
+        # Install Node.js LTS version as our base Node.js version
+        curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
+        sudo apt-get install -y nodejs
+
+        # Use n version manager to switch to Node.js v13.8.0
+        sudo npm install -g n
+        sudo n 13.8.0    
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"  
