--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,13 @@ commands:
           name: Destroy environments
           when: on_fail
           command: |
+            # Delete backend stack
             aws cloudformation delete-stack \
               --stack-name udapeople-backend-<<parameters.workflow_id>>
+            # Delete frontend stack
             aws cloudformation delete-stack \
-              --stack-name udapeople-frontend-<<parameters.workflow_id>>            
+              --stack-name udapeople-frontend-<<parameters.workflow_id>>     
+            # Empty frontend bucket
             aws s3 rm s3://udapeople-<<parameters.workflow_id>> --recursive
 
   revert-migrations:
@@ -183,10 +186,17 @@ jobs:
       - run:
           name: Add back-end ip to ansible inventory
           command: |
-            aws cloudformation describe-stacks \
-            --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-            --query "Stacks[0].Outputs[0].OutputValue" \
-            --output text >> .circleci/ansible/inventory.txt
+            BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --output text)
+            echo $BACKEND_PUBLIC_IP >> .circleci/ansible/inventory.txt
+            cat .circleci/ansible/inventory.txt
+            
+          # aws cloudformation describe-stacks \
+          # --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+          # --query "Stacks[0].Outputs[0].OutputValue" \
+          # --output text >> .circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
@@ -202,6 +212,8 @@ jobs:
     steps:
       # Checkout code from git
       - checkout
+      - install_ansible
+      - install_awscli
       # Add ssh keys with fingerprint
       - add_ssh_keys:
           fingerprints: [66:b8:10:6e:fe:19:bc:e8:8e:1f:6c:94:21:a6:79:07]
@@ -209,22 +221,12 @@ jobs:
       - attach_workspace:
           at: ~/
       - run:
-          name: Install dependencies
-          command: |
-            apk add curl
-            apk add --upgrade bash
-            apk add --update ansible
-            apk add openssh-client
-            pip3 install awscli
-      - run:
-          name: Configure server
+          name: Run Configure Server Ansible play
           command: |
             cd .circleci/ansible
             cat inventory.txt
             ansible-playbook -i inventory.txt configure-server.yml
-            # cat ~/project/.circleci/ansible/inventory.txt
-            # export ANSIBLE_HOST_KEY_CHECKING=False
-            # ansible-playbook -i ~/project/.circleci/ansible/inventory.txt ~/project/.circleci/ansible/configure-server.yml   
+            
       # Here's where you will add some code to rollback on failure 
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}     
