--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -38,6 +38,13 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub backend-${ID}
+
+  InstanceEIP:
+  Type: AWS::EC2::EIP
+  Properties:
+    Domain: vpc
+    InstanceId: !Ref EC2Instance
+            
 Outputs:
   InstanceIP:
     Description: EC2 instance public IP
