--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -266,7 +266,7 @@ jobs:
   run-migrations:
     docker:
       # Docker image here that supports NodeJS
-      - image: cimg/python:3.10
+      - image: cimg/node:13.8.0
     steps:
       # Checkout code from git
       - checkout
