--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,18 +20,13 @@ commands:
             python3 -m pip install --user ansible
 
   install_nodejs:
-    description: Install Node.js 13.8.0
+    description: Install Node.js 13
     steps:
       - run:
-          name: Install Node.js 13.8.0
+          name: Install Node.js 13
           command: |
-            # Install Node.js LTS version as our base Node.js version
-            curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
+            curl -fsSL https://deb.nodesource.com/setup_13.x | sudo -E bash -
             sudo apt install -y nodejs
-
-            # Use n version manager to use Node.js v13.8.0
-            sudo npm install --global n
-            sudo n 13.8.0          
 
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
@@ -271,7 +266,6 @@ jobs:
       # Checkout code from git
       - checkout
       - install_awscli
-      - install_nodejs
       
       - run:
           name: Run migrations
