--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -265,8 +265,8 @@ jobs:
     steps:
       # Checkout code from git
       - checkout
-      # - install_awscli
-      # - install_nodejs
+      - install_awscli
+      - install_nodejs
       
       - run:
           name: Run migrations
@@ -274,6 +274,7 @@ jobs:
             cd backend
             npm install
             npm run migrations > migrations_dump.txt
+            cat migrations_dump.txt
       - run:
           name: Send migration results to memstash
           command: |
