--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,9 +159,7 @@ jobs:
           command: |
             cd frontend
             npm install
-            npm audit fix --force --audit-level=critical
-            npm audit --audit-level=critical
-          # npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
       # - slack/notify:
       #     channel: $SLACK_DEFAULT_CHANNEL
       #     event: fail
@@ -182,10 +180,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm audit fix --force --audit-level=critical
-            npm audit fix --force --audit-level=critical
-            npm audit --audit-level=critical
-          # npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
       # - slack/notify:
       #     channel: $SLACK_DEFAULT_CHANNEL
       #     event: fail
