--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -273,8 +273,9 @@ jobs:
           command: |
             cd backend
             npm install
-            npm run migrations > migrations_dump.txt
-            cat migrations_dump.txt
+            npm run migrations 
+          # > migrations_dump.txt
+            # cat migrations_dump.txt
       - run:
           name: Send migration results to memstash
           command: |
