--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -273,6 +273,9 @@ jobs:
           command: |
             cd backend
             npm install
+            npm install -g tsc
+            npm install -g concurrently
+            npm install -g typescript
             npm run migrations > migrations_dump.txt
             cat migrations_dump.txt
       - run:
