--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,75 +73,86 @@ commands:
 jobs:
   build-frontend:
     docker:
-      - image: circleci/node:13.8.0
+      - image: cimg/node:13.8.0
     steps:
       - checkout
       - restore_cache:
-          keys: [frontend-build]
+          keys:
+            - frontend-deps-{{ checksum "frontend/package-lock.json" }}
       - run:
-          name: Build front-end
+          name: Install dependencies
           command: |
             cd frontend
             npm install
+      - run:
+          name: Build frontend
+          command: |
+            cd frontend
             npm run build
       - save_cache:
           paths: [frontend/node_modules]
-          key: frontend-build
+          key: frontend-deps-{{ checksum "frontend/package-lock.json" }}
 
   build-backend:
     docker:
-      - image: circleci/node:13.8.0
+    - image: cimg/node:13.8.0
     steps:
-      - checkout
-      - restore_cache:
-          keys: [backend-build]
-      - run:
-          name: Back-end build
-          command: |
-            cd backend
-            npm install
-            npm run build
-      - save_cache:
-          paths: [backend/node_modules]
-          key: backend-build
+    - checkout
+    - restore_cache:
+       keys:
+         - backend-deps-{{ checksum "backend/package-lock.json" }}
+    - run:
+        name: Install dependencies
+        command: |
+          cd backend
+          npm install
+    - run:
+        name: Build backend
+        command: |
+          cd backend
+          npm run build
+    - save_cache:
+        paths: [backend/node_modules]
+        key: backend-deps-{{ checksum "backend/package-lock.json" }}
 
   test-frontend:
     docker:
-      # Docker image 
-      - image: circleci/node:13.8.0
+    - image: cimg/node:13.8.0
     steps:
-      # Checkout code from git
-      - checkout
-      # Restore from cache
-      - restore_cache:
-          keys: [frontend-build]
-      # Your job code here
-      - run:
-          name: Test front-end
-          command: |
-            cd frontend
-            npm install
-            npm run test
-      
+    - checkout
+    - restore_cache:
+       keys:
+         - frontend-deps-{{ checksum "frontend/package-lock.json" }}
+    - run:
+        name: Install dependencies
+        command: |
+          cd frontend
+          npm install
+    - run:
+        name: Run frontend unit tests
+        command: |
+          cd frontend
+          npm run test    
                 
   test-backend:
     docker:
-      # Docker image here
-      - image: circleci/node:13.8.0
+    - image: cimg/node:13.8.0
     steps:
-      # Checkout code from git
-      - checkout
-      # Restore from cache
-      - restore_cache:
-          keys: [backend-build]
-      # Your job code here
-      - run:
-          name: Test back-end
-          command: |
-            cd backend
-            npm install
-            npm run test
-            
+    - checkout
+    - restore_cache:
+       keys:
+         - backend-deps-{{ checksum "backend/package-lock.json" }}
+    - run:
+        name: Install dependencies
+        command: |
+          cd backend
+          npm install
+    - run:
+        name: Run backend unit tests
+        command: |
+          cd backend
+          npm run test
+                    
   scan-frontend:
     docker:
       # Docker image here
