--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -263,7 +263,7 @@ jobs:
   run-migrations:
     docker:
       # Docker image here that supports NodeJS
-      - image: circleci/node:13.8.0
+      - image: sleavely/node-awscli:14.x
     steps:
       # Checkout code from git
       - checkout
@@ -274,9 +274,14 @@ jobs:
           name: Run migrations
           command: |
             cd backend
-            npm install
-            npm run migrations > migrations_dump.txt
-            cat migrations_dump.txt
+            cat .env
+            npm i
+            npm run build
+            npm run migrations
+          # cd backend
+          # npm install
+          # npm run migrations > migrations_dump.txt
+          # cat migrations_dump.txt
       - run:
           name: Send migration results to memstash
           command: |
