--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -267,8 +267,8 @@ jobs:
     steps:
       # Checkout code from git
       - checkout
-      - install_awscli
-      - install_nodejs
+      # - install_awscli
+      # - install_nodejs
       
       - run:
           name: Run migrations
