--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -263,12 +263,12 @@ jobs:
   run-migrations:
     docker:
       # Docker image here that supports NodeJS
-      - image: sleavely/node-awscli:14.x
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
       - checkout
-      # - install_awscli
-      # - install_nodejs
+      - install_awscli
+      - install_nodejs
       
       - run:
           name: Run migrations
@@ -277,7 +277,8 @@ jobs:
             cat .env
             npm i
             npm run build
-            npm run migrations
+            npm run migrations > run_migrations_logs.log
+            cat run_migrations_logs.log         
           # cd backend
           # npm install
           # npm run migrations > migrations_dump.txt
