--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,10 +80,14 @@ jobs:
       - restore_cache:
           keys: [frontend-build]
       - run:
-          name: Build front-end
+          name: Install dependencies
           command: |
             cd frontend
             npm install
+      - run:
+          name: Build frontend
+          command: |
+            cd frontend
             npm run build
       - save_cache:
           paths: [frontend/node_modules]
@@ -97,10 +101,14 @@ jobs:
       - restore_cache:
           keys: [backend-build]
       - run:
-          name: Back-end build
+          name: Install dependencies
           command: |
             cd backend
             npm install
+      - run:
+          name: Build backend
+          command: |
+            cd backend
             npm run build
       - save_cache:
           paths: [backend/node_modules]
@@ -118,12 +126,15 @@ jobs:
           keys: [frontend-build]
       # Your job code here
       - run:
-          name: Test front-end
+          name: Install dependencies
           command: |
             cd frontend
             npm install
+      - run:
+          name: Run frontend unit tests
+          command: |
+            cd frontend
             npm run test
-      
                 
   test-backend:
     docker:
@@ -137,10 +148,14 @@ jobs:
           keys: [backend-build]
       # Your job code here
       - run:
-          name: Test back-end
+          name: Install dependencies
           command: |
             cd backend
             npm install
+      - run:
+          name: Run backend unit tests
+          command: |
+            cd backend
             npm run test
             
   scan-frontend:
@@ -394,19 +409,19 @@ workflows:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend]
-      - scan-backend:
-          requires: [build-backend]
-      - scan-frontend:
-          requires: [build-frontend]
-      - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-          filters:
-            branches:
-              only: [main]
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]
+      # - scan-backend:
+      #     requires: [build-backend]
+      # - scan-frontend:
+      #     requires: [build-frontend]
+      # - deploy-infrastructure:
+      #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+      #     filters:
+      #       branches:
+      #         only: [main]
+      # - configure-infrastructure:
+      #     requires: [deploy-infrastructure]
+      # - run-migrations:
+      #     requires: [configure-infrastructure]
       # - deploy-frontend:
       #     requires: [run-migrations]
       # - deploy-backend:
