--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,7 +179,7 @@ jobs:
           command: |
             cd frontend
             npm audit fix --force --audit-level=critical
-            npm audit --audit-level=critical
+          # npm audit --audit-level=critical
       # - slack/notify:
       #     channel: $SLACK_DEFAULT_CHANNEL
       #     event: fail
@@ -206,7 +206,7 @@ jobs:
             cd backend
             npm audit fix --force --audit-level=critical
             npm audit fix --force --audit-level=critical
-            npm audit --audit-level=critical
+          # npm audit --audit-level=critical
 
       # - slack/notify:
       #     channel: $SLACK_DEFAULT_CHANNEL
