--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,21 +118,52 @@ jobs:
             cd backend
             npm run test
             
-  # scan-frontend:
-  #   docker:
-  #     # Docker image here
-  #   steps:
+  scan-frontend:
+    docker:
+      # Docker image here
+      - image: cimg/node:13.8.0
+    steps:
       # Checkout code from git
+      - checkout
       # Restore from cache
+      - restore_cache:
+          keys: [frontend-build]
       # Your job code here
+      - run:
+          name: Install dependencies
+          command: |
+            cd frontend
+            npm install
+      - run:
+          name: Scan frontend packages
+          command: |
+            cd frontend
+            npm audit --audit-level=critical
+          # npm audit fix --force --audit-level=critical
 
-  # scan-backend:
-  #   docker:
-  #     # Docker image here
-  #   steps:
+  scan-backend:
+    docker:
+      # Docker image here
+      - image: cimg/node:13.8.0
+    steps:
       # Checkout code from git
+      - checkout
       # Restore from cache
+      - restore_cache:
+          keys: [backend-build]
       # Your job code here
+      - run:
+          name: Install dependencies
+          command: |
+            cd backend
+            npm install
+      - run:
+          name: Scan backend packages
+          command: |
+            cd backend
+            npm audit --audit-level=critical
+          # npm audit fix --force --audit-level=critical
+          # npm audit fix --force --audit-level=critical
 
 #   deploy-infrastructure:
 #     docker:
@@ -309,10 +340,10 @@ workflows:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend]
-      # - scan-backend:
-      #     requires: [build-backend]
-      # - scan-frontend:
-      #     requires: [build-frontend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
       # - deploy-infrastructure:
       #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #     filters:
