--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,8 +138,8 @@ jobs:
           name: Scan frontend packages
           command: |
             cd frontend
+            npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
-          # npm audit fix --force --audit-level=critical
 
   scan-backend:
     docker:
@@ -161,9 +161,9 @@ jobs:
           name: Scan backend packages
           command: |
             cd backend
+            npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
-          # npm audit fix --force --audit-level=critical
-          # npm audit fix --force --audit-level=critical
 
 #   deploy-infrastructure:
 #     docker:
