--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ commands:
           when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS=$(curl --insecure  https://kvdb.io/${32QN6diuo4nNg2rwddo7rBNb}/migration_<< parameters.Workflow_ID >>)
+            SUCCESS=$(curl --insecure  https://kvdb.io/32QN6diuo4nNg2rwddo7rBNb/migration_<< parameters.Workflow_ID >>)
             if(( $SUCCESS==1 )); 
             then
               cd ~/project/backend
@@ -80,7 +80,7 @@ commands:
 jobs:
   build-frontend:
     docker:
-      - image: cimg/node:13.8.0
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
@@ -123,7 +123,7 @@ jobs:
   test-frontend:
     docker:
       # Docker image 
-      - image: cimg/node:13.8.0
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
       - checkout
@@ -140,11 +140,12 @@ jobs:
           name: Run frontend unit tests
           command: |
             cd frontend
-            npm run test              
+            npm run test       
+
   test-backend:
     docker:
       # Docker image here
-      - image: cimg/node:13.8.0
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
       - checkout
@@ -166,7 +167,7 @@ jobs:
   scan-frontend:
     docker:
       # Docker image here
-      - image: cimg/node:13.8.0
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
       - checkout
@@ -189,7 +190,7 @@ jobs:
   scan-backend:
     docker:
       # Docker image here
-      - image: cimg/node:13.8.0
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
       - checkout
@@ -213,7 +214,7 @@ jobs:
   deploy-infrastructure:
     docker:
       # Docker image here that supports AWS CLI
-      - image: cimg/python:3.10
+      - image: amazon/aws-cli
     steps:
         # Checkout code from git
         - checkout
@@ -249,7 +250,7 @@ jobs:
     
   configure-infrastructure:
     docker:
-    - image: cimg/python:3.10
+    - image: python:3.7-alpine3.11
     steps:
     - checkout
     - install_ansible
@@ -271,7 +272,7 @@ jobs:
   run-migrations:
     docker:
       # Docker image here that supports NodeJS
-      - image: cimg/node:13.8.0
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
       - checkout
@@ -290,13 +291,15 @@ jobs:
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-              curl https://kvdb.io/${32QN6diuo4nNg2rwddo7rBNb}/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              curl https://kvdb.io/32QN6diuo4nNg2rwddo7rBNb/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             else
               echo "No migrations are pending" 
             fi
      # Here's where you will add some code to rollback on failure 
-      - destroy-environment
-      - revert-migrations     
+      - destroy-environment:
+          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}     
 
 #   deploy-frontend:
 #     docker:
