--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -296,10 +296,8 @@ jobs:
               echo "No migrations are pending" 
             fi
      # Here's where you will add some code to rollback on failure 
-      - destroy-environment:
-          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert-migrations:
-          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}     
+      - destroy-environment
+      - revert-migrations
 
 #   deploy-frontend:
 #     docker:
