--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -214,7 +214,7 @@ jobs:
   deploy-infrastructure:
     docker:
       # Docker image here that supports AWS CLI
-      - image: amazon/aws-cli
+      - image: cimg/python:3.10
     steps:
         # Checkout code from git
         - checkout
@@ -250,7 +250,7 @@ jobs:
     
   configure-infrastructure:
     docker:
-    - image: python:3.7-alpine3.11
+    - image: cimg/python:3.10
     steps:
     - checkout
     - install_ansible
