--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -276,8 +276,9 @@ jobs:
       # Checkout code from git
       - checkout
       - install_awscli
-      # - restore_cache:
-      #     keys: [backend-deps]
+      - install_nodejs
+      - restore_cache:
+          keys: [backend-build]
       - run:
           name: Run migrations
           command: |
