--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -299,47 +299,88 @@ jobs:
       - destroy-environment
       - revert-migrations
 
-#   deploy-frontend:
+  deploy-frontend:
+    docker:
+      # Docker image here that supports AWS CLI
+      - image: cimg/python:3.10
+    steps:
+      # Checkout code from git
+      - checkout
+      - install_awscli
+      - install_nodejs
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Install dependencies
+          command: |
+            cd frontend
+            npm install
+      - run:
+          name: Get backend url
+          command: |
+            # your code here
+            BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --output text)
+
+            echo "API_URL=http://${BACKEND_PUBLIC_IP}:3030" >> frontend/.env
+            cat frontend/.env
+            
+      - run:
+          name: Deploy frontend objects
+          command: |
+            # your code here
+            cd frontend
+            npm run build
+            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+      # Here's where you will add some code to rollback on failure   
+      - destroy-environment
+      - revert-migrations   
+                    
+#   deploy-backend:
 #     docker:
-#       # Docker image here that supports AWS CLI
+#       # Docker image here that supports Ansible
 #     steps:
 #       # Checkout code from git
+#       # Add ssh keys with fingerprint
+#       # attach workspace
 #       - run:
 #           name: Install dependencies
 #           command: |
 #             # your code here
 #       - run:
-#           name: Get backend url
+#           name: Deploy backend
 #           command: |
 #             # your code here
-#             export API_URL="http://${BACKEND_IP}:3030"
-#             echo "${API_URL}"
-#       - run:
-#           name: Deploy frontend objects
-#           command: |
-#             # your code here
-#       # Here's where you will add some code to rollback on failure      
-                    
-# #   deploy-backend:
+#       # Here's where you will add some code to rollback on failure  
+
+# #   smoke-test:
 # #     docker:
-# #       # Docker image here that supports Ansible
+# #       # Lightweight Docker image 
 # #     steps:
 # #       # Checkout code from git
-# #       # Add ssh keys with fingerprint
-# #       # attach workspace
 # #       - run:
 # #           name: Install dependencies
 # #           command: |
 # #             # your code here
 # #       - run:
-# #           name: Deploy backend
+# #           name: Get backend url
+# #           command: |
+# #             # your code here
+# #       - run:
+# #           name: Backend smoke test.
+# #           command: |
+# #             # your code here
+# #       - run:
+# #           name: Frontend smoke test.
 # #           command: |
 # #             # your code here
 # #       # Here's where you will add some code to rollback on failure  
 
-# # #   smoke-test:
+# # #   cloudfront-update:
 # # #     docker:
-# # #       # Lightweight Docker image 
+# # #       # Docker image here that supports AWS CLI
 # # #     steps:
 # # #       # Checkout code from git
 # # #       - run:
@@ -347,52 +388,29 @@ jobs:
 # # #           command: |
 # # #             # your code here
 # # #       - run:
-# # #           name: Get backend url
-# # #           command: |
-# # #             # your code here
-# # #       - run:
-# # #           name: Backend smoke test.
-# # #           command: |
-# # #             # your code here
-# # #       - run:
-# # #           name: Frontend smoke test.
+# # #           name: Update cloudfront distribution
 # # #           command: |
 # # #             # your code here
 # # #       # Here's where you will add some code to rollback on failure  
 
-# # # #   cloudfront-update:
+# # # # cleanup:
 # # # #     docker:
-# # # #       # Docker image here that supports AWS CLI
+# # # #       # Docker image here
 # # # #     steps:
 # # # #       # Checkout code from git
 # # # #       - run:
-# # # #           name: Install dependencies
+# # # #           name: Get old stack workflow id
 # # # #           command: |
 # # # #             # your code here
+# # # #             export OldWorkflowID="the id here"
+# # # #             export STACKS=[] #put the list of stacks here
 # # # #       - run:
-# # # #           name: Update cloudfront distribution
+# # # #           name: Remove old stacks and files
 # # # #           command: |
-# # # #             # your code here
-# # # #       # Here's where you will add some code to rollback on failure  
-
-# # # # # cleanup:
-# # # # #     docker:
-# # # # #       # Docker image here
-# # # # #     steps:
-# # # # #       # Checkout code from git
-# # # # #       - run:
-# # # # #           name: Get old stack workflow id
-# # # # #           command: |
-# # # # #             # your code here
-# # # # #             export OldWorkflowID="the id here"
-# # # # #             export STACKS=[] #put the list of stacks here
-# # # # #       - run:
-# # # # #           name: Remove old stacks and files
-# # # # #           command: |
-# # # # #             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
-# # # # #             then
-# # # # #               # your code here
-# # # # #             fi
+# # # #             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+# # # #             then
+# # # #               # your code here
+# # # #             fi
             
 
 workflows:
@@ -417,8 +435,8 @@ workflows:
           requires: [deploy-infrastructure]
       - run-migrations:
           requires: [configure-infrastructure]
-      # - deploy-frontend:
-      #     requires: [run-migrations]
+      - deploy-frontend:
+          requires: [run-migrations]
       # - deploy-backend:
       #     requires: [run-migrations]
       # - smoke-test:
